--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ARMONI - Estilo y Decoración</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="CSS/style.css" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 </head>
@@ -26,11 +26,6 @@
       <a href="#contacto">Contacto</a>
     </nav>
   </header>
-  
-  
-  
-  
-  
 
   <!-- HERO -->
   <section class="hero" id="inicio">
@@ -140,7 +135,7 @@
   </footer>
 
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="js/script.js"></script>
+  <script src="JS/script.js"></script>
 
   <!-- SCRIPT FINAL -->
 <script>
